@@ -11,7 +11,6 @@ import java.util.Set;
 import lombok.SneakyThrows;
 import org.apache.maven.model.Resource;
 import org.apache.maven.plugin.AbstractMojo;
-import org.apache.maven.plugin.MojoExecutionException;
 import org.apache.maven.plugins.annotations.LifecyclePhase;
 import org.apache.maven.plugins.annotations.Mojo;
 import org.apache.maven.plugins.annotations.Parameter;
@@ -68,7 +67,7 @@ public class JavaTestCaseGeneratorMojo extends AbstractMojo {
 
     @SneakyThrows
     @Override
-    public void execute() throws MojoExecutionException {
+    public void execute() {
 
         // Defaults
         if (testCases == null || testCases.getDirectory() == null) {
@@ -116,8 +115,9 @@ public class JavaTestCaseGeneratorMojo extends AbstractMojo {
                                   final ModelDao modelDao) throws TestCaseException {
         final var testcaseLocator = tcFile.split("\\.")[0];
         final var testMetadata = modelDao.loadTestCaseMetadata(testcaseLocator);
-        final var dictionaryLocatorToLoad = Objects.requireNonNullElseGet(dictionaryLocator, () -> modelDao.listDictionaries(testMetadata).get(0).getTransientId());
-        final var testCase = modelDao.readTestCase(testcaseLocator, modelDao.readTestDictionary(dictionaryLocatorToLoad).get())
+        final var dictionaryLocatorToLoad = Objects.requireNonNullElseGet(dictionaryLocator, () -> modelDao.listDictionaries(testMetadata).getFirst().getTransientId());
+        final var testCase = modelDao.readTestCase(testcaseLocator, modelDao.readTestDictionary(dictionaryLocatorToLoad)
+                        .orElseThrow(() -> new IllegalStateException("Dictionary not found")))
                 .orElseThrow(() -> new RuntimeException("Unable to find dictionary: " + dictionaryLocator));
         final var generationMetadata = new GenerationMetadata(JavaTestCaseGeneratorMojo.class,
                 "dictionary=" + testCase.getDictionary());
